Store date independant from statement balance

Store the date of the last imported independant of a changed statement
balance.

BUG: 343878
FIXED-IN: 5.0.2